--- a/pageAcceuil.html
+++ b/pageAcceuil.html
@@ -8,5 +8,6 @@
 <body>
     <p>Ceci est ma page d acceuil</p>
     <p>Je vais ici introduire les composantes principales de mon application</p>
+    <p>le projet inclut cinq composantes</p>
 </body>
 </html>
