Modification du co-equipier

--- a/pageAcceuil.html
+++ b/pageAcceuil.html
@@ -10,5 +10,6 @@
     <p>Je vais ici introduire les composantes principales de mon application</p>
     <p>le projet inclut cinq composantes</p>
     <h1>Introduction</h1>
+    <p>Ajout fait par làutre membre de lèquipe</p>
 </body>
 </html>
